--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "node-redis": "^0.1.7",
-    "redis": "^5.0.1",
-    "ulid": "^3.0.0"
+    "redis": "^5.0.1"
   }
 }
