--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "redis": "^5.0.1"
+    "redis": "^5.0.1",
+    "ulid": "^3.0.0"
   }
 }
