--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/Albert0i/probabilistic-data-structure#readme",
   "devDependencies": {
-    "@faker-js/faker": "^9.8.0"
+    "@faker-js/faker": "^9.8.0",
+    "prisma": "^6.8.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
